packages/taquito-michel-codec/test/contracts_007/ill_typed/chain_id_arity.tz
parameter (chain_id nat);
storage unit;
code { CDR; NIL operation; PAIR }
